--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "validator": "^13.5.2"
   }
 }
