--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "file-type": "^16.3.0",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "module": "^1.2.5",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "validator": "^13.5.2"
