--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "module": "^1.2.5",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "socket.io": "^4.0.1",
     "validator": "^13.5.2"
   }
 }
