--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "module": "^1.2.5",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "socket.io": "^4.0.1",
