--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "socket.io": "^4.0.1",
     "validator": "^13.5.2"
   }
