--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,16 @@
   "dependencies": {
     "arraybuffer-to-string": "^1.0.2",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "file-type": "^16.3.0",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
-    "module": "^1.2.5",
+    "module": "^1.1.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
