--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "socket.io": "^4.0.1",
     "validator": "^13.5.2"
